# python-project-template

./: .pre-commit-config.yaml  CODE_OF_CONDUCT.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: codespell.yml  isort.yml  mypy.yml  pre-commit.yml  pytest.yml  ruff.yml  tests.yml
